# active-trace

./: .gitignore  AGENTS.md  CHANGES.md  CLAUDE.md  README.md  alembic.ini  docker-compose.yml  skills-lock.json
.atl/: skill-registry.md
backend/: .env.example  Dockerfile  env.demo  pyproject.toml  requirements.txt
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 001_tenant.py  002_auth.py  003_email_hash.py  004_rbac_tables.py  005_audit_log.py  005_estructura_academica.py  006_usuarios_asignaciones.py  007_padron.py  007_programas_fechas.py  008_encuentros_guardias.py  009_padron_permissions.py  010_calificaciones.py  011_umbral_materia.py  012_seed_umbral_materia.py  013_analisis_reportes_permissions.py  014_analisis_actividades.py  015_comunicacion.py  016_evaluaciones.py  017_coloquios_permissions.py  018_avisos.py  018_profesor_equipos_permission.py  019_profesor_coloquios_ver.py  019_tareas.py  020_mensajes_internos.py  021_padron_email_cifrado.py  022_padron_vaciar_permission.py  023_liquidaciones_honorarios.py  024_mensajes_permissions.py  025_comunicacion_backfill_destinatario_enc.py  026_merge_heads.py  027_alumno_coloquios.py
backend/app/: main.py
backend/app/audit/: __init__.py  constants.py  decorator.py  impersonation.py  models.py  repositories.py  schemas.py  services.py
backend/app/auth/: deps.py  errors.py  models.py  repositories.py  schemas.py
backend/app/core/: audit.py  config.py  database.py  dependencies.py  exceptions.py  logging.py  observability.py  permissions.py  rate_limit.py  redis_client.py  security.py  tenancy.py
backend/app/integrations/: email.py  moodle_ws.py
backend/app/models/: __init__.py  asignacion.py  avisos.py  base.py  carrera.py  cohorte.py  evaluacion.py  fecha_academica.py  guardia.py  instancia_encuentro.py  liquidacion.py  materia.py  mensaje_interno.py  mixins.py  padron.py  programa_materia.py  slot_encuentro.py  tarea.py  tenant.py  usuario.py
backend/app/rbac/: __init__.py  constants.py  models.py  public_router.py  repositories.py  router.py  schemas.py  services.py
backend/app/repositories/: README.md  __init__.py  avisos.py  base.py  evaluaciones.py  guardias.py  liquidaciones.py  mensajes.py  padron.py  tareas.py  usuarios.py
backend/app/routers/: alumno.py  avisos.py  coloquios.py  encuentros.py  equipos.py  estructura.py  facturas.py  guardias.py  liquidaciones.py  mensajes.py  padrones.py  perfil.py  programas_fechas.py  tareas.py  usuarios.py
backend/app/schemas/: analisis.py  avisos.py  comisiones.py  encuentros.py  equipos.py  estructura.py  evaluaciones.py  exportacion.py  guardias.py  liquidaciones.py  mensajes.py  monitores.py  padron.py  perfil.py  programas_fechas.py  reportes.py  tareas.py  usuarios.py
backend/app/services/: avisos.py  encuentros.py  equipos.py  estructura.py  evaluaciones.py  guardias.py  liquidaciones.py  mensajes.py  padron.py  padron_parser.py  perfil.py  programas_fechas.py  tareas.py  usuarios.py
backend/app/workers/: comunicacion_worker.py  main.py
backend/scripts/: seed.py  seed_dev.py  seed_domain.py
backend/tests/: conftest.py  test_app_startup.py  test_c26_api_integration.py  test_config.py  test_database.py  test_equipos.py  test_health.py  test_padron.py
backend/tests/_fakes/: __init__.py  models.py
backend/tests/analisis/: conftest.py  (+1 more)
(+705 files in other folders)
