[project]
name = "activia-trace"
version = "0.1.0"
description = "Plataforma de gestión académica y trazabilidad multi-tenant"
readme = "../README.md"
requires-python = ">=3.12"
license = { text = "UNLICENSED" }

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "sqlalchemy>=2.0.36",
    "alembic>=1.14.0",
    "asyncpg>=0.30.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "argon2-cffi>=25.0.0",
    "python-jose[cryptography]>=3.3.0",
    "cryptography>=43.0.0",
    "pyotp>=2.9.0",
    "qrcode[pil]>=8.2",
    "opentelemetry-instrumentation-fastapi>=0.53b0",
    "opentelemetry-api>=1.28.0",
    "opentelemetry-sdk>=1.28.0",
    "opentelemetry-exporter-otlp>=1.28.0",
    "httpx>=0.28.0",
    "tenacity>=9.0.0",
    "openpyxl>=3.1.0",
    "python-multipart>=0.0.20",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "httpx>=0.28.0",
    "ruff>=0.9.0",
    "mypy>=1.14.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
filterwarnings = ["ignore::DeprecationWarning"]
markers = [
    "no_db: skip autouse fixtures that need a live PostgreSQL connection (e.g. `_apply_schema_once`).",
]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.mypy]
python_version = "3.13"
strict = true